subscriptions: test filtering on metadata
